# jupyter-sketches

./: .gitignore  README.md  bloom-i.ipynb  pyproject.toml  requirements.txt  riley-ii.ipynb  riley-iii.ipynb
sketches/: a-landscape-i.ipynb  bloom-i.ipynb  bloom-ii.ipynb  gentle-grid-i.ipynb  gentle-grid-ii.ipynb  riley-i.ipynb  riley-ii.ipynb
